--- a/.github/workflows/build-fedora-hyprland-rpms.yml
+++ b/.github/workflows/build-fedora-hyprland-rpms.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Create output directory
         run: mkdir -p ${{ env.OUT_DIR }}
 
-      - name: Run build container
+      - name: Clone, compile and craft hyprland RPM packages
         run: |
           docker run --rm \
             -e HOST_UID=$(id -u) \
